KUDU-2403: Fix FakeDNS to work in Java 9+
This fixes the FakeDNS implementation in Java 9+ by
first trying to use reflection to replace the internal
java.net.InetAddress$NameService implementation (Java 9 or later)
with our own. If the java.net.InetAddress$NameService field
doesn’t exist, we add our NameService
implementation to the java.net.InetAddress$NameServices
field (Java 8 or earlier).

All Java versions have the same NameService interface.
The main difference is the field names and class location.
That allows us to use the same implementation to replace
the default NameService in all versions.

Change-Id: I319f42b6b878531325d6a48ce6ccdcc9b40fe2bc
Reviewed-on: http://gerrit.cloudera.org:8080/10321
Reviewed-by: Adar Dembo <adar@cloudera.com>
Tested-by: Grant Henke <granthenke@apache.org>